# SophoSet3

./: .gitignore  BLOG_LINKEDIN.md  BLOG_MEDIUM.md  CHANGELOG.md  CONTRIBUTING.md  DATASET_MIGRATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  cli_lmdb.py  code_review.py  dataset_exporter.py  gr_dataviewer.py  pyproject.toml  requirements.txt  setup.py  sl_dataviewer.py  sl_lmdb_viewer.py  venv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
Text/MCQ/: __init__.py  ai2_arc_data.py  aime-1983-2024_data.py  bigbenchhard_data.py  medical_meadow_medicalqa_data.py  medicalconceptsqa_data.py  medmcqa_data.py  medqa_usmle_4options_data.py  mmlu_data.py  mmlu_pro_data.py  run_dataset.py  sciq_data.py  sl_text_mcq_viewer.py  text_mcq.py  winogrande_data.py
Text/OEQ/: MedQuad-MedQnA_data.py  aime2025_data.py  data_processor.py  deepscaler_data.py  gpqa_data.py  gsm8k_data.py  gsmplus.py  imo_geometry_data.py  math_lighteval_data.py  mathplus_data.py  medical_meadow_flashcards_data.py  medical_meadow_wikidoc_data.py  medicalquestions_data.py  medicationqa_data.py  medqa_data.py  medqnav3_data.py  medquad_data.py  metamathqa-40k_data.py  metamathqa_data.py  olympiads_data.py  openmedcases_data.py  pubmedqa_data.py  run_dataset.py  safetybench_data.py  scibench_data.py  simpleqa_data.py  text_oeq.py  toxic_prompts.py  truthfulqa_data.py
Vision/: __init__.py
Vision/MCQ/: ai2d_data.py  blink_data.py  hidden_flaws_gpt4v_data.py  mathv360k_data.py  mathverse_data.py  mathvision_data.py  mathvista_data.py  scienceqa_data.py  worldmedqa.py
Vision/OEQ/: animals_data.py  camo_data.py  chartqa_data.py  chest_xray_pneumonia_data.py  culturalvqa_data.py  docvqa_data.py  iam_line_data.py  iam_sentences_data.py  illusionbench_data.py  infovqa_data.py  kvasir_vqa_data.py  kvasir_vqa_x1_data.py  mmstar_data.py  ocrbenchv2_data.py  olympiadbench_data.py  olympicareana_data.py  openmedcaseimages_data.py  openmedimages_data.py  pd12m_data.py  realworldqa_data.py  roco_radiology_data.py  textvqa_data.py  visitbench_data.py  vlmsareblind_data.py  vqa_rad_data.py
sophoset/: __init__.py
sophoset/core/: __init__.py  base_hf_dataset.py
sophoset/text/: __init__.py
sophoset/text/mcq/: __init__.py  ai2_arc_data.py  aime-1983-2024_data.py  bigbenchhard_data.py  medical_meadow_medicalqa_data.py  medicalconceptsqa_data.py  medmcqa_data.py  medqa_usmle_4options_data.py  mmlu_data.py  mmlu_pro_data.py  run_dataset.py  sciq_data.py  text_mcq.py  winogrande_data.py
sophoset/text/oeq/: MedQuad-MedQnA_data.py  __init__.py  aime2025_data.py  data_processor.py  deepscaler_data.py  gpqa_data.py  gsm8k_data.py  gsmplus.py  imo_geometry_data.py  math_lighteval_data.py  mathplus_data.py  medqa_data.py  (+16 more)
sophoset/utils/: __init__.py  cli_lmdb.py  dataset_exporter.py  gr_dataviewer.py  lmdb_storage.py  sl_dataviewer.py  sl_lmdb_viewer.py
sophoset/vision/: ollama_vision.py
(+37 files in other folders)
